--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newsapp",
-  "homepage": "https://Hirendra77.github.io/NewsDaily-React-App",
+  "homepage": "/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
